fixed timer spacing

--- a/style.css
+++ b/style.css
@@ -98,7 +98,7 @@ div {
     border: 7px solid black;
     height: 45px;
     margin: 0 auto;
-    width: 140px;
+    width: 170px;
     border-radius: 10px;
     position: relative;
     top: 20px;
